--- a/Develop/assets/CSS/style.css
+++ b/Develop/assets/CSS/style.css
@@ -69,3 +69,9 @@ textarea {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+
+.container {
+  align-items: center;
+  position: relative;
+  justify-content: center;
+}
