--- a/Develop/assets/CSS/style.css
+++ b/Develop/assets/CSS/style.css
@@ -25,7 +25,7 @@ textarea {
   white-space: pre-wrap;
 }
 
-.time-block {
+.timeblock {
   text-align: center;
   border-radius: 15px;
 }
@@ -70,8 +70,8 @@ textarea {
   transition: all 0.3s ease-in-out;
 }
 
-.container {
+/* .container {
   align-items: center;
   position: relative;
   justify-content: center;
-}
+} */
